[package]
name = "sawblade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
bitflags = "1.3.2"

[features]
arbitrary = ["dep:arbitrary"]

[dev-dependencies]
criterion = "0.3.5"

[lib]
name = "sawblade"
path = "src/lib.rs"

[[bench]]
name = "sample"
harness = false

[profile.dev]
debug = true
opt-level = 2
